<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:padding="8dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="3dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearNajkoristenije"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtEkavicaNaj"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ekavica"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_double_arrow"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/txtIjekavicaNaj"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableRight="@drawable/ic_expand_more_black_24px"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/ijekavica"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/colapsableInfoNaj"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1Naj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/opis"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                />

            <TextView
                android:id="@+id/txtOpisNaj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sadrzaj"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:id="@+id/textView3Naj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/izvor" />

            <TextView
                android:id="@+id/txtIzvorNaj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/sadrzaj"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:id="@+id/textView2Naj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/primjer" />

            <TextView
                android:id="@+id/txtPrimjerNaj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/sadrzaj"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>