<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    app:cardElevation="3dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:foreground="?android:attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/cardViewItem">

        <TextView
            android:id="@+id/txtIjekavica"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableRight="@drawable/ic_expand_more_black_24px"
            android:padding="16dp"
            android:text="@string/ijekavica"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorPrimary"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/izvor" />

        <TextView
            android:id="@+id/txtIzvor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/sadrzaj"
            android:textColor="@color/colorPrimary"/>

        <LinearLayout
            android:id="@+id/colapsableInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/opis" />

            <TextView
                android:id="@+id/txtOpis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/sadrzaj"
                android:textColor="@color/colorPrimary"/>


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/primjer"/>

            <TextView
                android:id="@+id/txtPrimjer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/sadrzaj"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>

        <android.widget.LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">



            <ImageView
                android:id="@+id/btnPrijaviGresku"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                app:srcCompat="@drawable/ic_caution_sign"
                tools:ignore="VectorDrawableCompat"
                android:padding="16dp"/>
        </android.widget.LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>