<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.praksa.ucenik.jatolog.ActivityPredlozenaRijec">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <!--<TextView
                android:id="@+id/txtPredlozenaRijecEkavica"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/predlozenarijecekavica"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtPredlozenaRijecEkavica"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/ekavska_rijec"
                    android:textSize="18dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </android.support.design.widget.TextInputLayout>
            <!--<TextView
                android:id="@+id/txtPredlozenaRijecIjekavica"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/predlozenarijecijekavica"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtPredlozenaRijecEkavica" />-->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtPredlozenaRijecIjekavica"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/ijekavska_rijec"
                    android:textSize="18dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </android.support.design.widget.TextInputLayout>

            <!--<TextView
                android:id="@+id/txtPredlozenaRijecPredlozio"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/predlozenarijecpredlozio"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtPredlozenaRijecIjekavica" />-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtPredlozenaRijecPredlozio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/vase_ime"
                    android:textSize="18dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </android.support.design.widget.TextInputLayout>

            <!--<TextView
                android:id="@+id/txtPredlozenaRijecIzvor"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/predlozenarijecizvor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtPredlozenaRijecPredlozio" />-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtPredlozenaRijecIzvor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/izvor"
                    android:textSize="18dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </android.support.design.widget.TextInputLayout>

            <!--<TextView
                android:id="@+id/txtPredlozenaRijecVrstaRijeci"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/predlozenarijecvrstarijeci"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtPredlozenaRijecIzvor" />-->


            <!--<TextView
                android:id="@+id/txtPredlozenaNapomena"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/predlozenarijecnapomena"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spnVrstaRijeci" />-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtPredlozenaRijecNapomena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/napomena"
                    android:textSize="18dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </android.support.design.widget.TextInputLayout>

            <!--<TextView
                android:id="@+id/txtPredlozenaPrimjer"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/predlozenarijecprimjer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtPredlozenaRijecNapomena" />-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtPredlozenaRijecPrimjer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/primjer"
                    android:textSize="18dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/spnVrstaRijeci"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:touchscreenBlocksFocus="false" />


        </LinearLayout>


    </ScrollView>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnPredloziRijec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:elevation="8dp"
            android:src="@drawable/ic_round_done_24px"
            app:backgroundTint="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </FrameLayout>



</LinearLayout>
